--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".profile.ProfileActivity"
+            android:name=".ui.informationUser.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.informationUser.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.profile.ProfileActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
