--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -22,14 +24,10 @@
             android:name=".register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".profile.ProfileActivity"
-            android:name=".ui.informationUser.RegisterActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.informationUser.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.profile.ProfileActivity"
+            android:name=".profile.ProfileActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
