--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ui.register.RegisterSuccessActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.register.RegisterDomisiliActivity"
             android:exported="false" />
         <activity
@@ -22,17 +25,13 @@
             android:name=".ui.register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.profile.ProfileActivity"
-            android:name=".ui.informationUser.RegisterActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.Login.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".ui.profile.ProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.home.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
