--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ui.landingPage.LandingThirdActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.register.RegisterSuccessActivity"
             android:exported="false" />
         <activity
