--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ui.Prediksi_pengeluaran"
+            android:exported="false" />
+        <activity
             android:name=".ui.tabunganidealku.TabunganIdealkuActivity"
             android:exported="false"
             android:theme="@style/Theme.MyApplication" />
@@ -51,6 +54,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.home.MainActivity"
             android:exported="false" />
